# PReMM

./: .gitignore  README.md  logger.py  pyproject.toml  repair_defects4j.py  run.py  utils.py
Config/: defects4j_environment.json  llm_config.json  prompt.py
basic_framework/: agent_state.py  all_enum.py  fault_localization.py  main_edge.py  main_graph.py  main_nodes.py  program_analysis.py  prompt.py  repair_edge.py  repair_graph.py  repair_nodes.py
datasets/defects4j/fault_location/groundtruth/closure/: 101
datasets/defects4j/fault_location/groundtruth/mockito/: 10  13  17  18  2  21  24  27  33  7  8  9
datasets/defects4jv2/fault_location/groundtruth/cli/: 10  12  13  15  16  17  18  19  21  22  23  29  31  32  33  35  37  38  39  9
datasets/defects4jv2/fault_location/groundtruth/closure/: 135  136  140  141  143  145  146  147  160  164  168  176
datasets/defects4jv2/fault_location/groundtruth/codec/: 15  8
datasets/defects4jv2/fault_location/groundtruth/collections/: 26
datasets/defects4jv2/fault_location/groundtruth/compress/: 10  11  15  16  21  26  28  32  33  40  41  43  47  6  7
datasets/defects4jv2/fault_location/groundtruth/csv/: 10  7
datasets/defects4jv2/fault_location/groundtruth/gson/: 1  10  14  18
datasets/defects4jv2/fault_location/groundtruth/jacksoncore/: 11  15  21  22  26
datasets/defects4jv2/fault_location/groundtruth/jacksondatabind/: 100  106  112  12  17  24  28  3  32  35  42  43  44  48  49  51  54  58  6  63  67  68  7  74  75  76  77  79  8  85  9  (+2 more)
defects4j_tools/: defects4j.py  fault_localization.py  validation.py
(+164 files in other folders)
